# hiking-planner-ii

./: .gitignore  CLAUDE.md  certification_challenge_report.md  hiking_planner_specification.md  infrastructure diagram.drawio
backend/: .gitignore  pyproject.toml  railpack.json  railway.toml
backend/app/: config.py  constants.py  db.py  email_sender.py  geocode.py  graph.py  llm.py  main.py  nodes.py  prompts.py  qdrant_store.py  rate_limit.py  routing.py  schemas.py  security.py  state.py  tools.py  turnstile.py
backend/qdrant_data/: meta.json
backend/scripts/: draw_graph.py  verify_qdrant.py
frontend/: app.js  index.html  package-lock.json  package.json  style.css  vite.config.js
